--- a/_proc/00_core.ipynb
+++ b/_proc/00_core.ipynb
@@ -30,12 +30,16 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/arihantvyavhare/nbdev_cards/blob/main/nbdev_cards/core.py#L10){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### foo\n",
        "\n",
        ">      foo ()"
       ],
       "text/plain": [
        "---\n",
+       "\n",
+       "[source](https://github.com/arihantvyavhare/nbdev_cards/blob/main/nbdev_cards/core.py#L10){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### foo\n",
        "\n",
